# clp_operations

./: Changes.md  README  clp_operations.opam  dune-project
lib/: circularLinearProgression.ml  dune
test/: dune  test.ml
